Funziona, sistemare loop infinito ( se elementi uguali ), guardate se ci sono errori